--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,14 @@ jobs:
         with:
           node-version: '14'
 
-      - name: Install Dependencies
+      - name: Installing 🚚
         run: npm install
 
-      - name: Build Packages
+      - name: Building 🏗
         run: npm run build
+
+      - name: Deploying 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: dist # The folder the action should deploy.
