--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
-name: CI
+name: Release
 
-on: [push, pull_request]
+on:
+  release:
+    types: # This configuration does not affect the page_build event above
+      - created
 
 jobs:
   build:
