Modified .prettierrc to update styling rules. Modified files to update all stylings.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,8 @@
-"@yandeu/prettier-config"
+bracketSpacing: true
+endOfLine: "auto"
+semi: true
+trailingComma: "es5"
+tabWidth: 4
+useTabs: true
+semi: false
+singleQuote: false
