--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
-    "phaser": "^3.53.1",
-    "phaser-raycaster": "^0.9.3"
+    "phaser": "^3.53.1"
   }
 }
